# titanic-vectordatabase-chatbot

./: README.md  api.py  app.py  app_deploy.py  backend.py  config.toml  deploy_info.txt  main.py  pyproject.toml  requirements.txt  requirements_deploy.txt
.streamlit/: config.toml
